# Zeta

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  flat_hash_map_bench.cpp  node_hash_map_bench.cpp  time_retry_bench.cpp
cmake/: ZetaModule.cmake  ZetaTest.cmake  zetaConfig.cmake.in  zetaConfigVersion.cmake.in
cmake/package_smoke_test/: CMakeLists.txt  main.cpp
docs/: api-stability.md  architecture.md  module-map.md  release.md
examples/: CMakeLists.txt  README.md  crc.cpp  hashing.cpp  log_random.cpp  memory_views.cpp  metrics.cpp  ordered_index.cpp  quickstart.cpp  status_time.cpp  strings_pipeline.cpp  time_control.cpp  time_retry.cpp
fuzz/: CMakeLists.txt  README.md  container_btree_map_fuzz.cpp  container_inlined_vector_fuzz.cpp  container_node_hash_map_fuzz.cpp  crc32c_fuzz.cpp  hash_hash_fuzz.cpp  numeric_int128_fuzz.cpp  oss_fuzz_build.sh  portable_fuzz_main.cpp  project.yaml  random_random_fuzz.cpp  status_status_fuzz.cpp  status_statusor_fuzz.cpp  strings_escaping_fuzz.cpp  strings_format_fuzz.cpp  strings_join_fuzz.cpp  strings_numbers_fuzz.cpp  strings_split_fuzz.cpp  strings_str_cat_fuzz.cpp  strings_utils_fuzz.cpp
fuzz/corpus/container_btree_map_fuzz/: keys.txt
fuzz/corpus/container_inlined_vector_fuzz/: ops.txt
fuzz/corpus/hash_hash_fuzz/: sample.txt
fuzz/corpus/numeric_int128_fuzz/: edges.txt
fuzz/corpus/random_random_fuzz/: seed.txt
fuzz/corpus/status_status_fuzz/: not_found.txt
fuzz/corpus/status_statusor_fuzz/: value_or_error.txt
fuzz/corpus/strings_format_fuzz/: placeholders.txt
fuzz/corpus/strings_join_fuzz/: basic.txt
fuzz/corpus/strings_str_cat_fuzz/: parts.txt
fuzz/corpus/strings_utils_fuzz/: mixed_case.txt
tests/: CMakeLists.txt  README.md
tests/algorithm/: CMakeLists.txt  algorithm_test.cpp
tests/base/: CMakeLists.txt  base_test.cpp
tests/bits/: CMakeLists.txt  bit_ops_test.cpp
tests/cleanup/: CMakeLists.txt  cleanup_test.cpp
tests/container/: CMakeLists.txt  btree_map_test.cpp  fixed_array_test.cpp  flat_hash_map_test.cpp  flat_hash_set_test.cpp  inlined_vector_test.cpp  node_hash_map_test.cpp
tests/crc/: CMakeLists.txt  crc32c_test.cpp
tests/debugging/: CMakeLists.txt  debugging_test.cpp
tests/flags/: CMakeLists.txt  flag_header_fixture.h  flags_flag_header_test.cpp  flags_flag_header_test_2.cpp  flags_flag_test.cpp
tests/functional/: CMakeLists.txt  functional_test.cpp
tests/futures/: CMakeLists.txt  futures_future_test.cpp  futures_semifuture_test.cpp
tests/hash/: CMakeLists.txt  hash_hash_test.cpp
tests/log/: CMakeLists.txt  log_log_test.cpp
tests/memory/: CMakeLists.txt  any_invocable_test.cpp  bind_front_test.cpp  function_ref_test.cpp  span_test.cpp
tests/meta/: CMakeLists.txt  meta_type_traits_test.cpp
tests/metrics/: CMakeLists.txt  metrics_test.cpp
tests/numeric/: CMakeLists.txt  numeric_int128_test.cpp
tests/random/: CMakeLists.txt  random_test.cpp  smoke_test.cpp
tests/status/: CMakeLists.txt  result_test.cpp  status_builder_test.cpp  status_chain_test.cpp  status_test.cpp  statusor_test.cpp
tests/strings/: CMakeLists.txt  cord_test.cpp  str_cat_test.cpp  str_join_test.cpp  str_split_test.cpp  str_utils_test.cpp  strings_extra_test.cpp  strings_format_test.cpp  strings_numbers_test.cpp
tests/synchronization/: CMakeLists.txt  synchronization_mutex_test.cpp  synchronization_notification_test.cpp  synchronization_once_test.cpp  synchronization_synchronized_test.cpp
tests/time/: CMakeLists.txt  time_backoff_test.cpp  time_clock_test.cpp  time_duration_test.cpp  time_periodic_timer_test.cpp  time_retry_test.cpp  time_stopwatch_test.cpp  time_timestamp_test.cpp
tests/types/: CMakeLists.txt  any_test.cpp  optional_test.cpp  variant_test.cpp
tests/utility/: CMakeLists.txt  utility_test.cpp
zeta/: CMakeLists.txt
zeta/algorithm/: CMakeLists.txt  algorithm.h
zeta/base/: CMakeLists.txt  as_const.h  attributes.h  config.h  ignore.h  in_place.h  macros.h  optimization.h  thread_annotations.h
zeta/bits/: CMakeLists.txt  bit_ops.h
zeta/cleanup/: CMakeLists.txt  cleanup.h
zeta/container/: CMakeLists.txt  btree_map.h  btree_set.h  fixed_array.h  flat_hash_map.h  flat_hash_set.h  inlined_vector.h  node_hash_map.h  node_hash_set.h
zeta/container/internal/: btree_impl.h  raw_hash_set.h
zeta/crc/: CMakeLists.txt  crc32c.h
zeta/debugging/: CMakeLists.txt  assert.h  crash_handler.h  stack_trace.h
zeta/flags/: CMakeLists.txt  flag.h  help.h  parse.h
zeta/flags/internal/: registry.h
zeta/functional/: CMakeLists.txt  compose.h  overload.h  pipe.h
zeta/futures/: CMakeLists.txt  future.h
zeta/hash/: CMakeLists.txt  hash.h
zeta/log/: CMakeLists.txt  formatters.h  log.h  record.h
zeta/log/internal/: severity.h  sink.h
zeta/memory/: CMakeLists.txt  any_invocable.h  bind_front.h  function_ref.h  span.h
zeta/meta/: CMakeLists.txt  type_traits.h
zeta/metrics/: CMakeLists.txt  metrics.h
zeta/numeric/: CMakeLists.txt  int128.h
zeta/random/: CMakeLists.txt  random.h
zeta/status/: CMakeLists.txt  result.h  status.h  status_builder.h  status_chain.h  status_macros.h  statusor.h
zeta/status/internal/: message_join.h
zeta/strings/: CMakeLists.txt  ascii.h  cord.h  escaping.h  format.h  match.h  numbers.h  str_cat.h  str_join.h  str_split.h  str_utils.h  substitute.h
zeta/strings/internal/: alpha_num.h
zeta/synchronization/: CMakeLists.txt  mutex.h  notification.h  once.h  synchronized.h
zeta/time/: CMakeLists.txt  backoff.h  civil_time.h  clock.h  duration.h  periodic_timer.h  retry.h  stopwatch.h  time_zone.h  timestamp.h
zeta/time/internal/: format_internal.h  math_internal.h
zeta/types/: CMakeLists.txt  any.h  optional.h  variant.h
zeta/utility/: CMakeLists.txt  utility.h
