function(zeta_fuzz_target name)
    add_executable(${name} ${name}.cpp)
    target_link_libraries(${name} PRIVATE zeta)
    target_compile_options(${name} PRIVATE ${ZETA_FUZZING_ENGINE})
    target_link_options(${name} PRIVATE ${ZETA_FUZZING_ENGINE})
endfunction()

zeta_fuzz_target(strings_split_fuzz)
zeta_fuzz_target(strings_utils_fuzz)
zeta_fuzz_target(strings_join_fuzz)
zeta_fuzz_target(strings_format_fuzz)
zeta_fuzz_target(hash_hash_fuzz)
zeta_fuzz_target(strings_str_cat_fuzz)
zeta_fuzz_target(numeric_int128_fuzz)
zeta_fuzz_target(container_inlined_vector_fuzz)
zeta_fuzz_target(strings_numbers_fuzz)
zeta_fuzz_target(status_status_fuzz)
zeta_fuzz_target(status_statusor_fuzz)
zeta_fuzz_target(container_btree_map_fuzz)
zeta_fuzz_target(random_random_fuzz)
