function(zeta_fuzz_target name)
    set(sources ${name}.cpp)
    if(NOT ZETA_FUZZING_ENGINE)
        list(APPEND sources portable_fuzz_main.cpp)
    endif()
    add_executable(${name} ${sources})
    target_link_libraries(${name} PRIVATE zeta)
    target_compile_options(${name} PRIVATE ${ZETA_FUZZ_COMPILE_OPTIONS})
    target_link_options(${name} PRIVATE ${ZETA_FUZZ_LINK_OPTIONS})
endfunction()

zeta_fuzz_target(strings_split_fuzz)
zeta_fuzz_target(strings_utils_fuzz)
zeta_fuzz_target(strings_join_fuzz)
zeta_fuzz_target(strings_format_fuzz)
zeta_fuzz_target(strings_escaping_fuzz)
zeta_fuzz_target(hash_hash_fuzz)
zeta_fuzz_target(strings_str_cat_fuzz)
zeta_fuzz_target(numeric_int128_fuzz)
zeta_fuzz_target(container_inlined_vector_fuzz)
zeta_fuzz_target(strings_numbers_fuzz)
zeta_fuzz_target(status_status_fuzz)
zeta_fuzz_target(status_statusor_fuzz)
zeta_fuzz_target(container_btree_map_fuzz)
zeta_fuzz_target(container_node_hash_map_fuzz)
zeta_fuzz_target(crc32c_fuzz)
zeta_fuzz_target(random_random_fuzz)
