include(${PROJECT_SOURCE_DIR}/cmake/ZetaTest.cmake)

# Keep test registration alphabetical so CTest output is stable and easy to
# scan. Each directory owns the tests for exactly one public module.
add_subdirectory(algorithm)
add_subdirectory(base)
add_subdirectory(bits)
add_subdirectory(cleanup)
add_subdirectory(container)
add_subdirectory(crc)
add_subdirectory(debugging)
add_subdirectory(flags)
add_subdirectory(functional)
add_subdirectory(futures)
add_subdirectory(hash)
add_subdirectory(log)
add_subdirectory(memory)
add_subdirectory(meta)
add_subdirectory(metrics)
add_subdirectory(numeric)
add_subdirectory(random)
add_subdirectory(status)
add_subdirectory(strings)
add_subdirectory(synchronization)
add_subdirectory(time)
add_subdirectory(types)
add_subdirectory(utility)
