# ── Per-module CMake (headers-only modules, listed for IDE discovery) ─

# Each subdirectory has its own CMakeLists.txt that just registers
# headers so they show up in IDE project trees.
add_subdirectory(bits)
add_subdirectory(cleanup)
add_subdirectory(flags)
add_subdirectory(hash)
add_subdirectory(log)
add_subdirectory(memory)
add_subdirectory(meta)
add_subdirectory(numeric)
add_subdirectory(random)
add_subdirectory(status)
add_subdirectory(strings)
add_subdirectory(synchronization)
add_subdirectory(time)
add_subdirectory(utility)
add_subdirectory(container)
